--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,10 +1,10 @@
-druid.driverClassName=com.mysql.jdbc.Driver 
+druid.driverClassName=org.mariadb.jdbc.Driver
 druid.url=jdbc:mysql://127.0.0.1:3306/manager?useUnicode=true&characterEncoding=UTF-8
 druid.username=root
 druid.password=root123
 druid.initialSize=10
 druid.maxActive=20
-#druid.maxIdle=10
+druid.maxIdle=10
 druid.minIdle=5
 druid.maxWait=60000
 druid.removeAbandoned=true
