--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,7 +1,7 @@
 druid.driverClassName=org.mariadb.jdbc.Driver
-druid.url=jdbc:mysql://127.0.0.1:3306/manager?useUnicode=true&characterEncoding=UTF-8
+druid.url=jdbc:mysql://127.0.0.1:3306/mbs?useUnicode=true&characterEncoding=UTF-8
 druid.username=root
-druid.password=root123
+druid.password=5913215
 druid.initialSize=10
 druid.maxActive=20
 druid.maxIdle=10
