--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,16 +47,14 @@
 
 	<filter>
 		<filter-name>JSONPFilter</filter-name>
-		<filter-class>com.sendtomoon.MyBatisSpring.common.JsonpCallbackFilter
-		</filter-class>
+		<filter-class>com.sendtomoon.MyBatisSpring.common.JsonpCallbackFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>JSONPFilter</filter-name>
 		<url-pattern>/service/*</url-pattern>
 	</filter-mapping>
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener
-		</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<listener>
 		<listener-class>com.sendtomoon.MyBatisSpring.common.SpringWebContextUtil
